--- a/src/pages/Category/Category.css
+++ b/src/pages/Category/Category.css
@@ -1,9 +1,13 @@
 .category>div{
     padding: 10px;
 }
-.category img {
-    max-width: 200px;
-    max-height: 200px;
+.products {
+    width: 216px;
+    height: 162px;
+    object-fit: cover;
+}
+.category-content {
+    position: relative;
 }
 .category_right-side {
     padding: 10px;
@@ -14,4 +18,24 @@
 .location {
     position: relative;
     bottom: 0;
+}
+.category-title {
+    width: 100%;
+    min-height: 110px;
+}
+.category-title:first-child {
+    font-size: 19px;
+}
+.category_right-side span {
+    font-size: 12px;
+}
+.fright {
+    background-color: rgb(238, 234, 228);
+}
+@media (min-width: 768px) {
+    .fright {
+        position: absolute;
+        top: 20px;
+        right: 10px;
+    }
 }
